# 99_X_others

./: .gitignore  README.md  z_mk_gute_codes.txt
2_jenkins/: Dockerfile  commands.txt
3_Liora_security_Docker/: vulnerable_api.py
3_api_security/: api_cli.py  api_testing.py
LLMOps-setup-course/: .gitignore  LICENSE  Makefile  Makefile.curl  README.md  docker-compose.yml  env.example  pyproject.toml  test-requirements.txt  test_cache_local.py
LLMOps-setup-course/litellm/: Dockerfile  README.md  litellm-config-security.yaml  litellm-config.yaml
LLMOps-setup-course/monitoring/: prometheus.yml
LLMOps-setup-course/scripts/: init-qdrant.sh  init_mlflow_experiments.py
Langchain_Cours_MLOps/: Makefile  z_test.py
a_socialmedia/: config.py  database.py  docker-compose.yml  main.py  requirements.txt
agentic_patterns/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  requirements_old_croq.txt
agentic_patterns/prompts/: system_prompt.txt
agentic_patterns/src/: main.py  state.py
agentic_patterns/src/agents/: agent_nodes.py  conditional_agent.py  human_in_loop_agent.py  linear_agent.py  loop_agent.py
agentic_patterns/src/nodes/conditional_agent/: __init__.py  handle_critical.py  handle_low.py  routing.py
agentic_patterns/src/nodes/human_in_loop_agent/: apply_action.py  feedback_decision.py  propose_action.py  routing.py
agentic_patterns/src/nodes/linear_agent/: generate_report.py
agentic_patterns/src/nodes/loop_agent/: finalize_investigation.py  search_logs.py
agentic_patterns/src/tools/: calculator.py  mlops_tools.py
(+81 files in other folders)
