[project]
name = "ai-agents-mlops-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain==0.3.27",
    "langchain-core==0.3.74",
    "langchain-groq==0.3.7",
    "langchain-openai>=0.3.32",
    "langgraph==0.6.6",
    "numexpr==2.11.0",
    "python-dotenv==1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
